UP: Configuração, resolução de dependências, 1º teste EF* -Configuração básica entre Entity Framework e Postgres; -Instalação de dependências: System.IO, Entity, Npgsql... -Primeiro teste bem sucedido com Entity e as classes: Pessoa, Contato, Endereço.

--- a/Proj.MVC/appsettings.json
+++ b/Proj.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings":{
+    "ConStrPsql": "User ID=postgres; Password=aluno; Server=localhost; Port=5433; Database=BDTeste; Integrated Security=true; Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
