--- a/Proj.Aplicacao/Proj.Aplicacao.csproj
+++ b/Proj.Aplicacao/Proj.Aplicacao.csproj
@@ -6,4 +6,9 @@
     <Folder Include="Interfaces" />
     <Folder Include="Services" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>2.1.1</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
