--- a/Proj.Aplicacao/Proj.Aplicacao.csproj
+++ b/Proj.Aplicacao/Proj.Aplicacao.csproj
@@ -3,12 +3,14 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Interfaces" />
     <Folder Include="Services" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>2.1.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Entidades\EnumEstado.cs" />
   </ItemGroup>
 </Project>
